[gd_scene load_steps=17 format=4 uid="uid://piw1ffh2ljly"]

[ext_resource type="Script" path="res://Scenes/Main floor rooms/Supply Closet/supply_closet.gd" id="1_0dtoi"]
[ext_resource type="TileSet" uid="uid://clwqjap3ihiu" path="res://Scenes/collision tileset.tres" id="2_tomo4"]
[ext_resource type="TileSet" uid="uid://vy7wx3h42jmo" path="res://Scenes/background tileset.tres" id="3_lwea3"]
[ext_resource type="PackedScene" uid="uid://d3smthgcyvtgq" path="res://Scenes/player.tscn" id="4_kuhmd"]
[ext_resource type="Script" path="res://Scenes/Main floor rooms/Supply Closet/Crowbar.gd" id="5_h7fjr"]
[ext_resource type="Texture2D" uid="uid://bonk2cgv3tdm6" path="res://Assets/closet_shelving.png" id="5_h26mk"]
[ext_resource type="Texture2D" uid="uid://c7x26vcppgodw" path="res://Assets/box_open.png" id="5_jwujx"]
[ext_resource type="Texture2D" uid="uid://bfx5otn34ye1d" path="res://Assets/wrench-blue.png" id="6_ulac0"]
[ext_resource type="Script" path="res://Interaction/InteractionArea.gd" id="7_j4w0r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4nn5"]
size = Vector2(11.3137, 4.00001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm6d2"]
size = Vector2(24, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp4n2"]
size = Vector2(17, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgko7"]
size = Vector2(9.89948, 9.89949)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5g8g"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jh53t"]
size = Vector2(68.5894, 30.0919)

[sub_resource type="CircleShape2D" id="CircleShape2D_b6m7c"]
radius = 6.0

[node name="Supply_Closet" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0dtoi")

[node name="Collision" type="TileMap" parent="."]
tile_set = ExtResource("2_tomo4")
format = 2

[node name="Layer1" type="TileMapLayer" parent="Collision"]
use_parent_material = true
tile_map_data = PackedByteArray("AAALABEAAQAQAAAAAAAMABEAAQAQAAAAAAANABEAAQAQAAAAAAAOABIAAQAQAAAAAAAPABIAAQAQAAAAAAAQABIAAQAQAAAAAAARABEAAQAQAAAAAAASABEAAQAQAAAAAAATABEAAQAQAAAAAAAUABEAAQAQAAAAAAAVABEAAQAQAAAAAAAWABEAAQAQAAAAAAAXABEAAQAQAAAAAAAYABEAAQAQAAAAAAAZABEAAQAQAAAAAAAaABEAAQAQAAAAAAARABIAAQAQAAAAAAANABIAAQAQAAAAAAAQAAwAAQAQAAAAAAARAAwAAQAQAAAAAAASAAwAAQAQAAAAAAATAAwAAQAQAAAAAAAUAAwAAQAQAAAAAAAVAAwAAQAQAAAAAAAWAAwAAQAQAAAAAAAXAAwAAQAQAAAAAAAYAA0AAQAQAAAAAAAZAA4AAQAQAAAAAAAaAA8AAQAQAAAAAAAbABAAAQAQAAAAAAAYAA4AAQAEAAAAAAAZAA8AAQAEAAAAAAAaABAAAQAEAAAAAAAPAAwAAQAQAAAAAAANAA0AAQAQAAAAAAALAA8AAQAQAAAAAAAMAA4AAQAIAAAAAAAMAA0AAQAQAAAAAAALAA4AAQAQAAAAAAAXAA0AAQAEAAAAAAALABAAAQAIAAAAAAAOAA0AAQAIAAAAAAAOAAwAAQAQAAAAAAAbABEAAQAQAAAAAAAKABEAAQAQAAAAAAAKABAAAQAQAAAAAAA=")
tile_set = ExtResource("2_tomo4")

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource("3_lwea3")
format = 2

[node name="background flat" type="TileMapLayer" parent="Background"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAQAAAAAAAAAAEAAAAQAAAAAAAAAAIAAAAQAAAAAAAAAAMAAAAQAAAAAAAAAAQAAAAQAAAAAAAAAAUAAAAQAAAAAAAAAAYAAAAQAAAAAAAAAAcAAAAQAAAAAAAAAAgAAAAQAAAAAAAAAAkAAAAQAAAAAAAAAAoAAAAQAAAAAAAAAAsAAAAQAAAAAAAAAAwAAAAQAAAAAAAAAA0AAAAQAAAAAAAAAA4AAAAQAAAAAAAAAA8AAAAQAAAAAAAAABAAAAAQAAAAAAAAABEAAAAQAAAAAAAAABIAAAAQAAAAAAAAABMAAAAQAAAAAAAAABQAAAAQAAAAAAABAAAAAAAQAAAAAAABABQAAAAQAAAAAAACAAAAAAAQAAAAAAACABQAAAAQAAAAAAADAAAAAAAQAAAAAAADABQAAAAQAAAAAAAEAAAAAAAQAAAAAAAEABQAAAAQAAAAAAAFAAAAAAAQAAAAAAAFABQAAAAQAAAAAAAGAAAAAAAQAAAAAAAGABQAAAAQAAAAAAAHAAAAAAAQAAAAAAAHABQAAAAQAAAAAAAIAAAAAAAQAAAAAAAIABQAAAAQAAAAAAAJAAAAAAAQAAAAAAAJABQAAAAQAAAAAAAKAAAAAAAQAAAAAAALAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAANAAAAAAAQAAAAAAAOAAAAAAAQAAAAAAAPAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAARAAAAAAAQAAAAAAASAAAAAAAQAAAAAAATAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAVAAAAAAAQAAAAAAAWAAAAAAAQAAAAAAAXAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAZAAAAAAAQAAAAAAAaAAAAAAAQAAAAAAAbAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAcABQAAAAQAAAAAAAdAAAAAAAQAAAAAAAdABQAAAAQAAAAAAAeAAAAAAAQAAAAAAAeABQAAAAQAAAAAAAfAAAAAAAQAAAAAAAfABQAAAAQAAAAAAAgAAAAAAAQAAAAAAAgABQAAAAQAAAAAAAhAAAAAAAQAAAAAAAhABQAAAAQAAAAAAAiAAAAAAAQAAAAAAAiABQAAAAQAAAAAAAjAAAAAAAQAAAAAAAjABQAAAAQAAAAAAAkAAAAAAAQAAAAAAAkABQAAAAQAAAAAAAlAAAAAAAQAAAAAAAlAAEAAAAQAAAAAAAlAAIAAAAQAAAAAAAlAAMAAAAQAAAAAAAlAAQAAAAQAAAAAAAlAAUAAAAQAAAAAAAlAAYAAAAQAAAAAAAlAAcAAAAQAAAAAAAlAAgAAAAQAAAAAAAlAAkAAAAQAAAAAAAlAAoAAAAQAAAAAAAlAAsAAAAQAAAAAAAlAAwAAAAQAAAAAAAlAA0AAAAQAAAAAAAlAA4AAAAQAAAAAAAlAA8AAAAQAAAAAAAlABAAAAAQAAAAAAAlABEAAAAQAAAAAAAlABIAAAAQAAAAAAAlABMAAAAQAAAAAAAlABQAAAAQAAAAAAD/////AAAQAAAAAAD//wAAAAAQAAAAAAD//wEAAAAQAAAAAAD//wIAAAAQAAAAAAD//wMAAAAQAAAAAAD//wQAAAAQAAAAAAD//wUAAAAQAAAAAAD//wYAAAAQAAAAAAD//wcAAAAQAAAAAAD//wgAAAAQAAAAAAD//wkAAAAQAAAAAAD//woAAAAQAAAAAAD//wsAAAAQAAAAAAD//wwAAAAQAAAAAAD//w0AAAAQAAAAAAD//w4AAAAQAAAAAAD//w8AAAAQAAAAAAD//xAAAAAQAAAAAAD//xEAAAAQAAAAAAD//xIAAAAQAAAAAAD//xMAAAAQAAAAAAD//xQAAAAQAAAAAAD//xUAAAAQAAAAAAAAAP//AAAQAAAAAAAAABUAAAAQAAAAAAABAP//AAAQAAAAAAABABUAAAAQAAAAAAACAP//AAAQAAAAAAACABUAAAAQAAAAAAADAP//AAAQAAAAAAADABUAAAAQAAAAAAAEAP//AAAQAAAAAAAEABUAAAAQAAAAAAAFAP//AAAQAAAAAAAFABUAAAAQAAAAAAAGAP//AAAQAAAAAAAGABUAAAAQAAAAAAAHAP//AAAQAAAAAAAHABUAAAAQAAAAAAAIAP//AAAQAAAAAAAIABUAAAAQAAAAAAAJAP//AAAQAAAAAAAJABUAAAAQAAAAAAAKAP//AAAQAAAAAAAKABUAAAAQAAAAAAALAP//AAAQAAAAAAALABUAAAAQAAAAAAAMAP//AAAQAAAAAAAMABUAAAAQAAAAAAANAP//AAAQAAAAAAANABUAAAAQAAAAAAAOAP//AAAQAAAAAAAOABUAAAAQAAAAAAAPAP//AAAQAAAAAAAPABUAAAAQAAAAAAAQAP//AAAQAAAAAAAQABUAAAAQAAAAAAARAP//AAAQAAAAAAASAP//AAAQAAAAAAASABUAAAAQAAAAAAATAP//AAAQAAAAAAATABUAAAAQAAAAAAAUAP//AAAQAAAAAAAUABUAAAAQAAAAAAAVAP//AAAQAAAAAAAVABUAAAAQAAAAAAAWAP//AAAQAAAAAAAWABUAAAAQAAAAAAAXAP//AAAQAAAAAAAXABUAAAAQAAAAAAAYAP//AAAQAAAAAAAYABUAAAAQAAAAAAAZAP//AAAQAAAAAAAZABUAAAAQAAAAAAAaAP//AAAQAAAAAAAaABUAAAAQAAAAAAAbAP//AAAQAAAAAAAbABUAAAAQAAAAAAAcAP//AAAQAAAAAAAcABUAAAAQAAAAAAAdAP//AAAQAAAAAAAdABUAAAAQAAAAAAAeAP//AAAQAAAAAAAeABUAAAAQAAAAAAAfAP//AAAQAAAAAAAfABUAAAAQAAAAAAAgAP//AAAQAAAAAAAgABUAAAAQAAAAAAAhAP//AAAQAAAAAAAhABUAAAAQAAAAAAAiAP//AAAQAAAAAAAiABUAAAAQAAAAAAAjAP//AAAQAAAAAAAjABUAAAAQAAAAAAAkAP//AAAQAAAAAAAkABUAAAAQAAAAAAAlAP//AAAQAAAAAAAlABUAAAAQAAAAAAAmAP//AAAQAAAAAAAmAAAAAAAQAAAAAAAmAAEAAAAQAAAAAAAmAAIAAAAQAAAAAAAmAAMAAAAQAAAAAAAmAAQAAAAQAAAAAAAmAAUAAAAQAAAAAAAmAAYAAAAQAAAAAAAmAAcAAAAQAAAAAAAmAAgAAAAQAAAAAAAmAAkAAAAQAAAAAAAmAAoAAAAQAAAAAAAmAAsAAAAQAAAAAAAmAAwAAAAQAAAAAAAmAA0AAAAQAAAAAAAmAA4AAAAQAAAAAAAmAA8AAAAQAAAAAAAmABAAAAAQAAAAAAAmABEAAAAQAAAAAAAmABIAAAAQAAAAAAAmABMAAAAQAAAAAAAmABQAAAAQAAAAAAAmABUAAAAQAAAAAAABAAEAAAAQAAAAAAABAAIAAAAQAAAAAAABAAMAAAAQAAAAAAABAAQAAAAQAAAAAAABAAUAAAAQAAAAAAABAAYAAAAQAAAAAAABAAcAAAAQAAAAAAABAAgAAAAQAAAAAAABAAkAAAAQAAAAAAABAAoAAAAQAAAAAAABAAsAAAAQAAAAAAABAAwAAAAQAAAAAAABAA0AAAAQAAAAAAABAA4AAAAQAAAAAAABAA8AAAAQAAAAAAABABAAAAAQAAAAAAABABEAAAAQAAAAAAABABIAAAAQAAAAAAABABMAAAAQAAAAAAACAAEAAAAQAAAAAAACAAIAAAAQAAAAAAACAAMAAAAQAAAAAAACAAQAAAAQAAAAAAACAAUAAAAQAAAAAAACAAYAAAAQAAAAAAACAAcAAAAQAAAAAAACAAgAAAAQAAAAAAACAAkAAAAQAAAAAAACAAoAAAAQAAAAAAACAAsAAAAQAAAAAAACAAwAAAAQAAAAAAACAA0AAAAQAAAAAAACAA4AAAAQAAAAAAACAA8AAAAQAAAAAAACABAAAAAQAAAAAAACABEAAAAQAAAAAAACABIAAAAQAAAAAAACABMAAAAQAAAAAAADAAEAAAAQAAAAAAADAAIAAAAQAAAAAAADAAMAAAAQAAAAAAADAAQAAAAQAAAAAAADAAUAAAAQAAAAAAADAAYAAAAQAAAAAAADAAcAAAAQAAAAAAADAAgAAAAQAAAAAAADAAkAAAAQAAAAAAADAAoAAAAQAAAAAAADAAsAAAAQAAAAAAADAAwAAAAQAAAAAAADAA0AAAAQAAAAAAADAA4AAAAQAAAAAAADAA8AAAAQAAAAAAADABAAAAAQAAAAAAADABEAAAAQAAAAAAADABIAAAAQAAAAAAADABMAAAAQAAAAAAAEAAEAAAAQAAAAAAAEAAIAAAAQAAAAAAAEAAMAAAAQAAAAAAAEAAQAAAAQAAAAAAAEAAUAAAAQAAAAAAAEAAYAAAAQAAAAAAAEAAcAAAAQAAAAAAAEAAgAAAAQAAAAAAAEAAkAAAAQAAAAAAAEAAoAAAAQAAAAAAAEAAsAAAAQAAAAAAAEAAwAAAAQAAAAAAAEAA0AAAAQAAAAAAAEAA4AAAAQAAAAAAAEAA8AAAAQAAAAAAAEABAAAAAQAAAAAAAEABEAAAAQAAAAAAAEABIAAAAQAAAAAAAEABMAAAAQAAAAAAAFAAEAAAAQAAAAAAAFAAIAAAAQAAAAAAAFAAMAAAAQAAAAAAAFAAQAAAAQAAAAAAAFAAUAAAAQAAAAAAAFAAYAAAAQAAAAAAAFAAcAAAAQAAAAAAAFAAgAAAAQAAAAAAAFAAkAAAAQAAAAAAAFAAoAAAAQAAAAAAAFAAsAAAAQAAAAAAAFAAwAAAAQAAAAAAAFAA0AAAAQAAAAAAAFAA4AAAAQAAAAAAAFAA8AAAAQAAAAAAAFABAAAAAQAAAAAAAFABEAAAAQAAAAAAAFABIAAAAQAAAAAAAFABMAAAAQAAAAAAAGAAEAAAAQAAAAAAAGAAIAAAAQAAAAAAAGAAMAAAAQAAAAAAAGAAQAAAAQAAAAAAAGAAUAAAAQAAAAAAAGAAYAAAAQAAAAAAAGAAcAAAAQAAAAAAAGAAgAAAAQAAAAAAAGAAkAAAAQAAAAAAAGAAoAAAAQAAAAAAAGAAsAAAAQAAAAAAAGAAwAAAAQAAAAAAAGAA0AAAAQAAAAAAAGAA4AAAAQAAAAAAAGAA8AAAAQAAAAAAAGABAAAAAQAAAAAAAGABEAAAAQAAAAAAAGABIAAAAQAAAAAAAGABMAAAAQAAAAAAAHAAEAAAAQAAAAAAAHAAIAAAAQAAAAAAAHAAMAAAAQAAAAAAAHAAQAAAAQAAAAAAAHAAUAAAAQAAAAAAAHAAYAAAAQAAAAAAAHAAcAAAAQAAAAAAAHAAgAAAAQAAAAAAAHAAkAAAAQAAAAAAAHAAoAAAAQAAAAAAAHAAsAAAAQAAAAAAAHAAwAAAAQAAAAAAAHAA0AAAAQAAAAAAAHAA4AAAAQAAAAAAAHAA8AAAAQAAAAAAAHABAAAAAQAAAAAAAHABEAAAAQAAAAAAAHABIAAAAQAAAAAAAHABMAAAAQAAAAAAAIAAEAAAAQAAAAAAAIAAIAAAAQAAAAAAAIAAMAAAAQAAAAAAAIAAQAAAAQAAAAAAAIAAUAAAAQAAAAAAAIAAYAAAAQAAAAAAAIAAcAAAAQAAAAAAAIAAgAAAAQAAAAAAAIAAkAAAAQAAAAAAAIAAoAAAAQAAAAAAAIAAsAAAAQAAAAAAAIAAwAAAAQAAAAAAAIAA0AAAAQAAAAAAAIAA4AAAAQAAAAAAAIAA8AAAAQAAAAAAAIABAAAAAQAAAAAAAIABEAAAAQAAAAAAAIABIAAAAQAAAAAAAIABMAAAAQAAAAAAAJAAEAAAAQAAAAAAAJAAIAAAAQAAAAAAAJAAMAAAAQAAAAAAAJAAQAAAAQAAAAAAAJAAUAAAAQAAAAAAAJAAYAAAAQAAAAAAAJAAcAAAAQAAAAAAAJAAgAAAAQAAAAAAAJAAkAAAAQAAAAAAAJAAoAAAAQAAAAAAAJAAsAAAAQAAAAAAAJAAwAAAAQAAAAAAAJAA0AAAAQAAAAAAAJAA4AAAAQAAAAAAAJAA8AAAAQAAAAAAAJABAAAAAQAAAAAAAJABEAAAAQAAAAAAAJABIAAAAQAAAAAAAJABMAAAAQAAAAAAAKAAEAAAAQAAAAAAAKAAIAAAAQAAAAAAAbAAEAAAAQAAAAAAAbAAIAAAAQAAAAAAAcAAEAAAAQAAAAAAAcAAIAAAAQAAAAAAAcAAMAAAAQAAAAAAAcAAQAAAAQAAAAAAAcAAUAAAAQAAAAAAAcAAYAAAAQAAAAAAAcAAcAAAAQAAAAAAAcAAgAAAAQAAAAAAAcAAkAAAAQAAAAAAAcAAoAAAAQAAAAAAAcAAsAAAAQAAAAAAAcAAwAAAAQAAAAAAAcAA0AAAAQAAAAAAAcAA4AAAAQAAAAAAAcAA8AAAAQAAAAAAAcABAAAAAQAAAAAAAcABEAAAAQAAAAAAAcABIAAAAQAAAAAAAcABMAAAAQAAAAAAAdAAEAAAAQAAAAAAAdAAIAAAAQAAAAAAAdAAMAAAAQAAAAAAAdAAQAAAAQAAAAAAAdAAUAAAAQAAAAAAAdAAYAAAAQAAAAAAAdAAcAAAAQAAAAAAAdAAgAAAAQAAAAAAAdAAkAAAAQAAAAAAAdAAoAAAAQAAAAAAAdAAsAAAAQAAAAAAAdAAwAAAAQAAAAAAAdAA0AAAAQAAAAAAAdAA4AAAAQAAAAAAAdAA8AAAAQAAAAAAAdABAAAAAQAAAAAAAdABEAAAAQAAAAAAAdABIAAAAQAAAAAAAdABMAAAAQAAAAAAAeAAEAAAAQAAAAAAAeAAIAAAAQAAAAAAAeAAMAAAAQAAAAAAAeAAQAAAAQAAAAAAAeAAUAAAAQAAAAAAAeAAYAAAAQAAAAAAAeAAcAAAAQAAAAAAAeAAgAAAAQAAAAAAAeAAkAAAAQAAAAAAAeAAoAAAAQAAAAAAAeAAsAAAAQAAAAAAAeAAwAAAAQAAAAAAAeAA0AAAAQAAAAAAAeAA4AAAAQAAAAAAAeAA8AAAAQAAAAAAAeABAAAAAQAAAAAAAeABEAAAAQAAAAAAAeABIAAAAQAAAAAAAeABMAAAAQAAAAAAAfAAEAAAAQAAAAAAAfAAIAAAAQAAAAAAAfAAMAAAAQAAAAAAAfAAQAAAAQAAAAAAAfAAUAAAAQAAAAAAAfAAYAAAAQAAAAAAAfAAcAAAAQAAAAAAAfAAgAAAAQAAAAAAAfAAkAAAAQAAAAAAAfAAoAAAAQAAAAAAAfAAsAAAAQAAAAAAAfAAwAAAAQAAAAAAAfAA0AAAAQAAAAAAAfAA4AAAAQAAAAAAAfAA8AAAAQAAAAAAAfABAAAAAQAAAAAAAfABEAAAAQAAAAAAAfABIAAAAQAAAAAAAfABMAAAAQAAAAAAAgAAEAAAAQAAAAAAAgAAIAAAAQAAAAAAAgAAMAAAAQAAAAAAAgAAQAAAAQAAAAAAAgAAUAAAAQAAAAAAAgAAYAAAAQAAAAAAAgAAcAAAAQAAAAAAAgAAgAAAAQAAAAAAAgAAkAAAAQAAAAAAAgAAoAAAAQAAAAAAAgAAsAAAAQAAAAAAAgAAwAAAAQAAAAAAAgAA0AAAAQAAAAAAAgAA4AAAAQAAAAAAAgAA8AAAAQAAAAAAAgABAAAAAQAAAAAAAgABEAAAAQAAAAAAAgABIAAAAQAAAAAAAgABMAAAAQAAAAAAAhAAEAAAAQAAAAAAAhAAIAAAAQAAAAAAAhAAMAAAAQAAAAAAAhAAQAAAAQAAAAAAAhAAUAAAAQAAAAAAAhAAYAAAAQAAAAAAAhAAcAAAAQAAAAAAAhAAgAAAAQAAAAAAAhAAkAAAAQAAAAAAAhAAoAAAAQAAAAAAAhAAsAAAAQAAAAAAAhAAwAAAAQAAAAAAAhAA0AAAAQAAAAAAAhAA4AAAAQAAAAAAAhAA8AAAAQAAAAAAAhABAAAAAQAAAAAAAhABEAAAAQAAAAAAAhABIAAAAQAAAAAAAhABMAAAAQAAAAAAAiAAEAAAAQAAAAAAAiAAIAAAAQAAAAAAAiAAMAAAAQAAAAAAAiAAQAAAAQAAAAAAAiAAUAAAAQAAAAAAAiAAYAAAAQAAAAAAAiAAcAAAAQAAAAAAAiAAgAAAAQAAAAAAAiAAkAAAAQAAAAAAAiAAoAAAAQAAAAAAAiAAsAAAAQAAAAAAAiAAwAAAAQAAAAAAAiAA0AAAAQAAAAAAAiAA4AAAAQAAAAAAAiAA8AAAAQAAAAAAAiABAAAAAQAAAAAAAiABEAAAAQAAAAAAAiABIAAAAQAAAAAAAiABMAAAAQAAAAAAAjAAEAAAAQAAAAAAAjAAIAAAAQAAAAAAAjAAMAAAAQAAAAAAAjAAQAAAAQAAAAAAAjAAUAAAAQAAAAAAAjAAYAAAAQAAAAAAAjAAcAAAAQAAAAAAAjAAgAAAAQAAAAAAAjAAkAAAAQAAAAAAAjAAoAAAAQAAAAAAAjAAsAAAAQAAAAAAAjAAwAAAAQAAAAAAAjAA0AAAAQAAAAAAAjAA4AAAAQAAAAAAAjAA8AAAAQAAAAAAAjABAAAAAQAAAAAAAjABEAAAAQAAAAAAAjABIAAAAQAAAAAAAjABMAAAAQAAAAAAAkAAEAAAAQAAAAAAAkAAIAAAAQAAAAAAAkAAMAAAAQAAAAAAAkAAQAAAAQAAAAAAAkAAUAAAAQAAAAAAAkAAYAAAAQAAAAAAAkAAcAAAAQAAAAAAAkAAgAAAAQAAAAAAAkAAkAAAAQAAAAAAAkAAoAAAAQAAAAAAAkAAsAAAAQAAAAAAAkAAwAAAAQAAAAAAAkAA0AAAAQAAAAAAAkAA4AAAAQAAAAAAAkAA8AAAAQAAAAAAAkABAAAAAQAAAAAAAkABEAAAAQAAAAAAAkABIAAAAQAAAAAAAkABMAAAAQAAAAAAALAAEAAAAQAAAAAAALAAIAAAAQAAAAAAAMAAEAAAAQAAAAAAAMAAIAAAAQAAAAAAANAAEAAAAQAAAAAAANAAIAAAAQAAAAAAAOAAEAAAAQAAAAAAAOAAIAAAAQAAAAAAAPAAEAAAAQAAAAAAAPAAIAAAAQAAAAAAAQAAEAAAAQAAAAAAAQAAIAAAAQAAAAAAARAAEAAAAQAAAAAAARAAIAAAAQAAAAAAASAAEAAAAQAAAAAAASAAIAAAAQAAAAAAATAAEAAAAQAAAAAAATAAIAAAAQAAAAAAAUAAEAAAAQAAAAAAAUAAIAAAAQAAAAAAAVAAEAAAAQAAAAAAAVAAIAAAAQAAAAAAAWAAEAAAAQAAAAAAAWAAIAAAAQAAAAAAAXAAEAAAAQAAAAAAAXAAIAAAAQAAAAAAAYAAEAAAAQAAAAAAAYAAIAAAAQAAAAAAAZAAEAAAAQAAAAAAAZAAIAAAAQAAAAAAAaAAEAAAAQAAAAAAAaAAIAAAAQAAAAAAARABUAAAAQAAAAAAAKAAMAAAAQAAAAAAAKAAQAAAAQAAAAAAAKAAUAAAAQAAAAAAAKAAYAAAAQAAAAAAAKAAcAAAAQAAAAAAAKAAgAAAAQAAAAAAAKAAkAAAAQAAAAAAAKAAoAAAAQAAAAAAAKAAsAAAAQAAAAAAAKAAwAAAAQAAAAAAAKAA0AAAAQAAAAAAAKAA4AAAAQAAAAAAAKAA8AAAAQAAAAAAAKABAAAAAQAAAAAAAKABEAAAAQAAAAAAALAAMAAAARAAAAAAALAAQAAAARAAAAAAALAAUAAAARAAAAAAALAAYAAAARAAAAAAALAAcAAAARAAAAAAALAAgAAAARAAAAAAALAAkAAAARAAAAAAALAAoAAAARAAAAAAALAAsAAAARAAAAAAALAAwAAAARAAAAAAALAA0AAAARAAAAAAALAA4AAAARAAAAAAALAA8AAAARAAAAAAALABAAAAARAAAAAAALABEAAAAQAAAAAAAMAAMAAAAQAAAAAAAMAAQAAAARAAAAAAAMAAUAAAARAAAAAAAMAAYAAAARAAAAAAAMAAcAAAARAAAAAAAMAAgAAAARAAAAAAAMAAkAAAARAAAAAAAMAAoAAAAQAAAAAAAMAAsAAAAQAAAAAAAMAAwAAAAQAAAAAAAMAA0AAAAQAAAAAAAMAA4AAAAQAAAAAAAMAA8AAAATAAAAAAAMABAAAAATAAAAAAAMABEAAAAQAAAAAAANAAMAAAAQAAAAAAANAAQAAAAQAAAAAAANAAUAAAARAAAAAAANAAYAAAARAAAAAAANAAcAAAARAAAAAAANAAgAAAARAAAAAAANAAkAAAASAAAAAAANAAoAAAASAAAAAAANAAsAAAASAAAAAAANAAwAAAASAAAAAAANAA0AAAASAAAAAAANAA4AAAATAAAAAAANAA8AAAATAAAAAAANABAAAAATAAAAAAANABEAAAAQAAAAAAAOAAMAAAAQAAAAAAAOAAQAAAAQAAAAAAAOAAUAAAAQAAAAAAAOAAYAAAARAAAAAAAOAAcAAAARAAAAAAAOAAgAAAARAAAAAAAOAAkAAAARAAAAAAAOAAoAAAARAAAAAAAOAAsAAAARAAAAAAAOAAwAAAARAAAAAAAOAA0AAAARAAAAAAAOAA4AAAATAAAAAAAOAA8AAAATAAAAAAAOABAAAAATAAAAAAAOABEAAAATAAAAAAAPAAMAAAAQAAAAAAAPAAQAAAAQAAAAAAAPAAUAAAAQAAAAAAAPAAYAAAAQAAAAAAAPAAcAAAASAAAAAAAPAAgAAAASAAAAAAAPAAkAAAASAAAAAAAPAAoAAAASAAAAAAAPAAsAAAASAAAAAAAPAAwAAAASAAAAAAAPAA0AAAATAAAAAAAPAA4AAAATAAAAAAAPAA8AAAATAAAAAAAPABAAAAATAAAAAAAPABEAAAATAAAAAAAQAAMAAAAQAAAAAAAQAAQAAAAQAAAAAAAQAAUAAAAQAAAAAAAQAAYAAAAQAAAAAAAQAAcAAAASAAAAAAAQAAgAAAASAAAAAAAQAAkAAAASAAAAAAAQAAoAAAASAAAAAAAQAAsAAAASAAAAAAAQAAwAAAASAAAAAAAQAA0AAAATAAAAAAAQAA4AAAATAAAAAAAQAA8AAAATAAAAAAAQABAAAAATAAAAAAAQABEAAAATAAAAAAARAAMAAAAQAAAAAAARAAQAAAAQAAAAAAARAAUAAAAQAAAAAAARAAYAAAAQAAAAAAARAAcAAAASAAAAAAARAAgAAAASAAAAAAARAAkAAAASAAAAAAARAAoAAAASAAAAAAARAAsAAAASAAAAAAARAAwAAAASAAAAAAARAA0AAAATAAAAAAARAA4AAAATAAAAAAARAA8AAAATAAAAAAARABAAAAATAAAAAAARABEAAAAQAAAAAAASAAMAAAAQAAAAAAASAAQAAAAQAAAAAAASAAUAAAAQAAAAAAASAAYAAAAQAAAAAAASAAcAAAASAAAAAAASAAgAAAASAAAAAAASAAkAAAASAAAAAAASAAoAAAASAAAAAAASAAsAAAASAAAAAAASAAwAAAASAAAAAAASAA0AAAATAAAAAAASAA4AAAATAAAAAAASAA8AAAATAAAAAAASABAAAAATAAAAAAASABEAAAAQAAAAAAATAAMAAAAQAAAAAAATAAQAAAAQAAAAAAATAAUAAAAQAAAAAAATAAYAAAAQAAAAAAATAAcAAAASAAAAAAATAAgAAAASAAAAAAATAAkAAAASAAAAAAATAAoAAAASAAAAAAATAAsAAAASAAAAAAATAAwAAAASAAAAAAATAA0AAAATAAAAAAATAA4AAAATAAAAAAATAA8AAAATAAAAAAATABAAAAATAAAAAAATABEAAAAQAAAAAAAUAAMAAAAQAAAAAAAUAAQAAAAQAAAAAAAUAAUAAAAQAAAAAAAUAAYAAAAQAAAAAAAUAAcAAAASAAAAAAAUAAgAAAASAAAAAAAUAAkAAAASAAAAAAAUAAoAAAASAAAAAAAUAAsAAAASAAAAAAAUAAwAAAASAAAAAAAUAA0AAAATAAAAAAAUAA4AAAATAAAAAAAUAA8AAAATAAAAAAAUABAAAAATAAAAAAAUABEAAAAQAAAAAAAVAAMAAAAQAAAAAAAVAAQAAAAQAAAAAAAVAAUAAAAQAAAAAAAVAAYAAAAQAAAAAAAVAAcAAAASAAAAAAAVAAgAAAASAAAAAAAVAAkAAAASAAAAAAAVAAoAAAASAAAAAAAVAAsAAAASAAAAAAAVAAwAAAASAAAAAAAVAA0AAAATAAAAAAAVAA4AAAATAAAAAAAVAA8AAAATAAAAAAAVABAAAAATAAAAAAAVABEAAAAQAAAAAAAWAAMAAAAQAAAAAAAWAAQAAAAQAAAAAAAWAAUAAAAQAAAAAAAWAAYAAAAQAAAAAAAWAAcAAAASAAAAAAAWAAgAAAASAAAAAAAWAAkAAAASAAAAAAAWAAoAAAASAAAAAAAWAAsAAAASAAAAAAAWAAwAAAASAAAAAAAWAA0AAAATAAAAAAAWAA4AAAATAAAAAAAWAA8AAAATAAAAAAAWABAAAAATAAAAAAAWABEAAAAQAAAAAAAXAAMAAAAQAAAAAAAXAAQAAAAQAAAAAAAXAAUAAAAQAAAAAAAXAAcAAAARAAAAAAAXAAgAAAARAAAAAAAXAAkAAAARAAAAAAAXAAoAAAARAAAAAAAXAAsAAAARAAAAAAAXAAwAAAARAAAAAAAXAA0AAAARAAAAAAAXAA4AAAATAAAAAAAXAA8AAAATAAAAAAAXABAAAAATAAAAAAAXABEAAAAQAAAAAAAYAAMAAAAQAAAAAAAYAAQAAAAQAAAAAAAYAAUAAAARAAAAAAAYAAYAAAARAAAAAAAYAAcAAAARAAAAAAAYAAgAAAARAAAAAAAYAAkAAAARAAAAAAAYAAoAAAARAAAAAAAYAAsAAAARAAAAAAAYAAwAAAARAAAAAAAYAA0AAAARAAAAAAAYAA4AAAARAAAAAAAYAA8AAAATAAAAAAAYABAAAAATAAAAAAAYABEAAAAQAAAAAAAZAAMAAAAQAAAAAAAZAAQAAAARAAAAAAAZAAUAAAARAAAAAAAZAAYAAAARAAAAAAAZAAcAAAARAAAAAAAZAAgAAAARAAAAAAAZAAkAAAARAAAAAAAZAAoAAAARAAAAAAAZAAsAAAARAAAAAAAZAAwAAAARAAAAAAAZAA0AAAARAAAAAAAZAA4AAAARAAAAAAAZAA8AAAARAAAAAAAZABAAAAATAAAAAAAZABEAAAAQAAAAAAAaAAMAAAARAAAAAAAaAAQAAAARAAAAAAAaAAUAAAARAAAAAAAaAAYAAAARAAAAAAAaAAcAAAARAAAAAAAaAAgAAAARAAAAAAAaAAkAAAARAAAAAAAaAAoAAAARAAAAAAAaAAsAAAARAAAAAAAaAAwAAAARAAAAAAAaAA0AAAARAAAAAAAaAA4AAAARAAAAAAAaAA8AAAARAAAAAAAaABAAAAARAAAAAAAaABEAAAAQAAAAAAAbAAMAAAAQAAAAAAAbAAQAAAAQAAAAAAAbAAUAAAAQAAAAAAAbAAYAAAAQAAAAAAAbAAcAAAAQAAAAAAAbAAgAAAAQAAAAAAAbAAkAAAAQAAAAAAAbAAoAAAAQAAAAAAAbAAsAAAAQAAAAAAAbAAwAAAAQAAAAAAAbAA0AAAAQAAAAAAAbAA4AAAAQAAAAAAAbAA8AAAAQAAAAAAAbABAAAAAQAAAAAAAbABEAAAAQAAAAAAAKABIAAAAQAAAAAAAKABMAAAAQAAAAAAAKABQAAAAQAAAAAAALABIAAAAQAAAAAAALABMAAAAQAAAAAAALABQAAAAQAAAAAAAMABIAAAAQAAAAAAAMABMAAAAQAAAAAAAMABQAAAAQAAAAAAANABIAAAAQAAAAAAANABMAAAAQAAAAAAANABQAAAAQAAAAAAAOABIAAAAQAAAAAAAOABMAAAAQAAAAAAAOABQAAAAQAAAAAAAPABIAAAAQAAAAAAAPABMAAAAQAAAAAAAPABQAAAAQAAAAAAAQABIAAAAQAAAAAAAQABMAAAAQAAAAAAAQABQAAAAQAAAAAAARABIAAAAQAAAAAAARABMAAAAQAAAAAAARABQAAAAQAAAAAAASABIAAAAQAAAAAAASABMAAAAQAAAAAAASABQAAAAQAAAAAAATABIAAAAQAAAAAAATABMAAAAQAAAAAAATABQAAAAQAAAAAAAUABIAAAAQAAAAAAAUABMAAAAQAAAAAAAUABQAAAAQAAAAAAAVABIAAAAQAAAAAAAVABMAAAAQAAAAAAAVABQAAAAQAAAAAAAWABIAAAAQAAAAAAAWABMAAAAQAAAAAAAWABQAAAAQAAAAAAAXABIAAAAQAAAAAAAXABMAAAAQAAAAAAAXABQAAAAQAAAAAAAYABIAAAAQAAAAAAAYABMAAAAQAAAAAAAYABQAAAAQAAAAAAAZABIAAAAQAAAAAAAZABMAAAAQAAAAAAAZABQAAAAQAAAAAAAaABIAAAAQAAAAAAAaABMAAAAQAAAAAAAaABQAAAAQAAAAAAAbABIAAAAQAAAAAAAbABMAAAAQAAAAAAAbABQAAAAQAAAAAAAXAAYAAAARAAAAAAA=")
tile_set = ExtResource("3_lwea3")

[node name="background detail" type="TileMapLayer" parent="Background"]
use_parent_material = true
tile_map_data = PackedByteArray("AAALAAMAAAAEAAAAAAALABAAAAAPAAAAAAAMAAQAAAAEAAAAAAAMAA8AAAAPAAAAAAANAAUAAAAEAAAAAAAYAAUAAAAIAAAAAAAYAA4AAAADAAAAAAAZAAQAAAAIAAAAAAAZAA8AAAADAAAAAAAaAAMAAAAIAAAAAAAaABAAAAADAAAAAAAOAAYAAAAEAAAAAAAXAAYAAAAIAAAAAAAOAA0AAAAPAAAAAAAXAA0AAAADAAAAAAANAAgAAAAOAAAAAAAMAAkAAAAMAAAAAAAMAA4AAAAPAAAAAAA=")
tile_set = ExtResource("3_lwea3")

[node name="line detail" type="TileMapLayer" parent="Background"]
use_parent_material = true
tile_set = ExtResource("3_lwea3")

[node name="Player" parent="." groups=["Player"] instance=ExtResource("4_kuhmd")]
z_index = 1
position = Vector2(103, 119)

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(100, 115)
rotation = -0.785398
skew = 0.785398
shape = SubResource("RectangleShape2D_p4nn5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(124, 141.5)
shape = SubResource("RectangleShape2D_cm6d2")

[node name="Box" type="Node2D" parent="."]
position = Vector2(133, 94)

[node name="Sprite2D" type="Sprite2D" parent="Box"]
position = Vector2(19, -10)
texture = ExtResource("5_jwujx")

[node name="Collision" type="StaticBody2D" parent="Box"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box/Collision"]
position = Vector2(-4.5, 10)
shape = SubResource("RectangleShape2D_lp4n2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Box/Collision"]
position = Vector2(4, 9.99999)
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_lgko7")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Box/Collision"]
position = Vector2(6, 2)
shape = SubResource("RectangleShape2D_e5g8g")

[node name="Shelf" type="Node2D" parent="."]
position = Vector2(192, 101)

[node name="Sprite2D" type="Sprite2D" parent="Shelf"]
position = Vector2(-40, -17)
texture = ExtResource("5_h26mk")

[node name="Collision" type="StaticBody2D" parent="Shelf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shelf/Collision"]
position = Vector2(-0.110916, 3.61091)
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_jh53t")

[node name="Wrench" type="Node2D" parent="." groups=["Crowbar"]]
position = Vector2(169, 127)
script = ExtResource("5_h7fjr")

[node name="Sprite2D" type="Sprite2D" parent="Wrench"]
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_ulac0")

[node name="InteractionArea" type="Area2D" parent="Wrench"]
script = ExtResource("7_j4w0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wrench/InteractionArea"]
shape = SubResource("CircleShape2D_b6m7c")

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["CanvasLayer"]]
scale = Vector2(5, 5)
transform = Transform2D(5, 0, 0, 5, 0, 0)

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Wrench/InteractionArea" to="Wrench/InteractionArea" method="_on_area_entered"]
[connection signal="area_exited" from="Wrench/InteractionArea" to="Wrench/InteractionArea" method="_on_area_exited"]
